<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"?>
<package format="3">
  <name>apriltag_tuner_pkg</name>
  <version>0.1.0</version>
  <description>Standalone realtime AprilTag 36h11 detector tuning GUI.</description>
  <maintainer email="orangepi@todo.todo">orangepi</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>opencv</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
