<?xml version="1.0"?>
<package format="2">
  <name>cargo_handler</name>
  <version>0.1.0</version>
  <description>
    Receive ROS commands to perform visual recognition and alignment of cargo,
    and execute real-time grasping and delivery for the Intel competition drone.
  </description>

  <maintainer email="201049813@qq.com">J.Lee</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
</package>
