<?xml version="1.0"?>
<package format="3">
  <name>robot_action_demo</name>
  <version>0.1.0</version>
  <description>Minimal ROS 2 action server/client demo for robot dispatch.</description>
  <maintainer email="miao@miao.com">miao</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>robot_task_interfaces</exec_depend>
  <exec_depend>my_launch</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
